// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> Default story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Name
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Status
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Chart
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Window
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Last Update
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 5
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> SortableInteractive story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Sortable
          <button
            class="button button--layout-icon-only button--tertiary button--sm button--size-sm button--variant-default"
            title="Sort"
            type="button"
          >
            <span
              class="text text--label-sm button__text"
            >
              <svg
                aria-hidden="true"
                class="icon"
                fill="currentColor"
                height="16px"
                style="--icon-size: 16px;"
                viewBox="0 0 24 24"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 18.831L14.7673 16.0638C14.8648 15.9663 14.9814 15.9143 15.1173 15.908C15.2533 15.9015 15.3764 15.9534 15.4865 16.0638C15.5969 16.1739 15.652 16.2938 15.652 16.4233C15.652 16.5528 15.5969 16.6727 15.4865 16.783L12.5655 19.704C12.4782 19.7912 12.389 19.8524 12.298 19.8878C12.207 19.9231 12.1077 19.9408 12 19.9408C11.8924 19.9408 11.793 19.9231 11.702 19.8878C11.611 19.8524 11.5219 19.7912 11.4345 19.704L8.51352 16.783C8.41602 16.6855 8.36411 16.5688 8.35777 16.433C8.35127 16.297 8.40319 16.1739 8.51352 16.0638C8.62369 15.9534 8.74352 15.8983 8.87302 15.8983C9.00252 15.8983 9.12244 15.9534 9.23277 16.0638L12 18.831ZM12 5.19251L9.23277 7.95976C9.13527 8.05726 9.01861 8.10926 8.88277 8.11576C8.74677 8.12209 8.62369 8.07009 8.51352 7.95976C8.40319 7.84959 8.34802 7.72976 8.34802 7.60026C8.34802 7.47076 8.40319 7.35092 8.51352 7.24076L11.4345 4.31951C11.5219 4.23234 11.611 4.17109 11.702 4.13576C11.793 4.10059 11.8924 4.08301 12 4.08301C12.1077 4.08301 12.207 4.10059 12.298 4.13576C12.389 4.17109 12.4782 4.23234 12.5655 4.31951L15.4865 7.24076C15.584 7.33809 15.6359 7.45476 15.6423 7.59076C15.6488 7.72659 15.5969 7.84959 15.4865 7.95976C15.3764 8.07009 15.2565 8.12526 15.127 8.12526C14.9975 8.12526 14.8776 8.07009 14.7673 7.95976L12 5.19251Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Not sortable
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value A
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value B
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value C
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Value D
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> StackedCardsExample story renders snapshot 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Students
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Status
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Cog skill
          </div>
        </th>
        <th
          class="table-header-cell"
        >
          <div
            class="text text--label-sm table-header-cell__container"
          >
            Time submitted
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Araya, Raquel
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Stop and Revise
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            2 hours ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Jesse Banet
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Stop and Revise
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Julie Davis
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Working
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            0
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Hussain, Adnan
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Review Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            0
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Ilango, Megha
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Needs Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Jaffer, Arman
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Needs Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Kang, Michelle
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Review Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Lewine, Chris
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Continue Working
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            2
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Luo, Celia
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            Review Feedback
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            1
          </p>
        </td>
        <td
          class="table-cell"
        >
          <p
            class="text text--body-sm"
          >
            3 days ago
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> TableWithCaption story renders snapshot 1`] = `
<table
  class="table"
>
  <caption>
    Optional caption for the table. Must be first descendant of Table if used.
  </caption>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Name
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Status
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Chart
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Window
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          Last Update
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 5
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> TableWithStyledHeader story renders snapshot 1`] = `
<table
  class="table"
>
  <caption>
    Optional caption for the table. Must be first descendant of Table if used.
  </caption>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Name
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Status
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Chart
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Window
          </em>
        </div>
      </th>
      <th
        class="table-header-cell"
      >
        <div
          class="text text--label-sm table-header-cell__container"
        >
          <em>
            Last Update
          </em>
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 1, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 2, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 3, Table Cell 5
        </p>
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 1
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 2
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 3
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 4
        </p>
      </td>
      <td
        class="table-cell"
      >
        <p
          class="text text--body-sm"
        >
          Table Row 4, Table Cell 5
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;
